--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -467,11 +467,12 @@
                             AutoGenerateColumns="False"
                             ItemsSource="{Binding MeshExportAvailableCollection}"
                             SelectionMode="Extended">
+
                             <syncfusion:SfDataGrid.Columns>
                                 <syncfusion:GridTextColumn
                                     AllowEditing="False"
                                     ColumnSizer="AutoLastColumnFill"
-                                    HeaderText="Export Task"
+                                    HeaderText="Files"
                                     HorizontalHeaderContentAlignment="Left"
                                     MappingName="Name" />
                             </syncfusion:SfDataGrid.Columns>
@@ -516,8 +517,18 @@
                         <syncfusion:SfDataGrid
                             x:Name="SelectedFilesGrid"
                             Margin="0,0,0,40"
+                            AutoGenerateColumns="False"
                             ItemsSource="{Binding MeshExportSelectedCollection}"
-                            SelectionMode="Extended" />
+                            SelectionMode="Extended">
+                            <syncfusion:SfDataGrid.Columns>
+                                <syncfusion:GridTextColumn
+                                    AllowEditing="False"
+                                    ColumnSizer="AutoLastColumnFill"
+                                    HeaderText="Files"
+                                    HorizontalHeaderContentAlignment="Left"
+                                    MappingName="Name" />
+                            </syncfusion:SfDataGrid.Columns>
+                        </syncfusion:SfDataGrid>
                         <Border
                             Margin="0"
                             Padding="5"
