--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -464,15 +464,23 @@
                         <syncfusion:SfDataGrid
                             x:Name="FileSelectionDataGrid"
                             Margin="0,0,0,40"
+                            AllowFiltering="True"
                             AutoGenerateColumns="False"
+                            FilterRowPosition="FixedTop"
                             ItemsSource="{Binding MeshExportAvailableCollection}"
                             SelectionMode="Extended">
 
                             <syncfusion:SfDataGrid.Columns>
                                 <syncfusion:GridTextColumn
                                     AllowEditing="False"
+                                    ColumnSizer="SizeToCells"
+                                    HeaderText="File Name"
+                                    HorizontalHeaderContentAlignment="Left"
+                                    MappingName="ShortName" />
+                                <syncfusion:GridTextColumn
+                                    AllowEditing="False"
                                     ColumnSizer="AutoLastColumnFill"
-                                    HeaderText="Files"
+                                    HeaderText="Full Path"
                                     HorizontalHeaderContentAlignment="Left"
                                     MappingName="Name" />
                             </syncfusion:SfDataGrid.Columns>
@@ -517,14 +525,22 @@
                         <syncfusion:SfDataGrid
                             x:Name="SelectedFilesGrid"
                             Margin="0,0,0,40"
+                            AllowFiltering="True"
                             AutoGenerateColumns="False"
+                            FilterRowPosition="FixedTop"
                             ItemsSource="{Binding MeshExportSelectedCollection}"
                             SelectionMode="Extended">
                             <syncfusion:SfDataGrid.Columns>
                                 <syncfusion:GridTextColumn
                                     AllowEditing="False"
+                                    ColumnSizer="SizeToCells"
+                                    HeaderText="File Name"
+                                    HorizontalHeaderContentAlignment="Left"
+                                    MappingName="ShortName" />
+                                <syncfusion:GridTextColumn
+                                    AllowEditing="False"
                                     ColumnSizer="AutoLastColumnFill"
-                                    HeaderText="Files"
+                                    HeaderText="Full Path"
                                     HorizontalHeaderContentAlignment="Left"
                                     MappingName="Name" />
                             </syncfusion:SfDataGrid.Columns>
