Simple Column Fix

--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -467,7 +467,7 @@
                             AllowFiltering="True"
                             AllowResizingColumns="True"
                             AutoGenerateColumns="False"
-                            ColumnSizer="Auto"
+                            ColumnSizer="AutoWithLastColumnFill"
                             FilterRowPosition="FixedTop"
                             ItemsSource="{Binding CollectionAvailableItems}"
                             SelectionMode="Extended">
